--- a/css/create-group.css
+++ b/css/create-group.css
@@ -285,3 +285,14 @@
   border-bottom: 1px solid #666;
   outline: none;
 }
+
+@media (max-width: 480px) {
+  .CreateGroupPage .contact-list-container .contact-item button {
+    height: 52px;
+  }
+  .CreateGroupPage .participant-item .participant-detail .remove-participant {
+    flex-basis: 32px;
+    width: 32px;
+    height: 32px;
+  }
+}
